New links, updated navigation

--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
             max-width: 100%;
             margin-top: -5px;
         }
+
+        #melonland-surf-club {
+            position: fixed;
+            bottom: 25px;
+            left: 25px;
+        }
     </style>
 </head>
 <body>
@@ -130,21 +136,23 @@
         <aside>
             <h2>Navigation</h2>
             <nav>
-                <h3>Personal</h3>
+                <h3>Mine</h3>
                 <ul>
                     <li><a href="/about.html">About</a></li>
                     <li><a href="/fursona.html">Fursona</a></li>
-                </ul>
-                <h3>Works</h3>
-                <ul>
                     <li><a href="/art.html">Art gallery</a></li>
-                    <li><a href="/writing.html">Writing</a></li>
+                    <li><a href="/writing.html">Written works</a></li>
+                    <li><a href="/readinglog.html">Reading log</a></li>
+                    <li><a href="/images/desktop.png">desktop.png</a></li>
+                </ul>
+                <h3>Yours</h3>
+                <ul>
                     <li><a href="/freebies.html">Freebies</a></li>
+                    <li><a href="/neopetsquiz.html">Neopets quiz</a></li>
                 </ul>
                 <h3>Et cetera</h3>
                 <ul>
                     <li><a href="/linkroll.html">Linkroll</a></li>
-                    <li><a href="/images/desktop.png">desktop.png</a></li>
                 </ul>
             </nav>
             <img src="/images/publicbath.jpg" style="border: 1px solid #ffd4e3;">
@@ -201,5 +209,6 @@
                 <img src="/images/strawbs.gif">
         </footer>
     </main>
+    <object id="melonland-surf-club" data="https://melonland.net/surf-badge.svg?fill=#e01b24" type="image/svg+xml" style="width: 100px; height: 100px;"></object>
 </body>
 </html>
