--- a/linkroll.html
+++ b/linkroll.html
@@ -126,10 +126,13 @@
             <header><h2>Neat sites</h2></header>
             <div>
                 <ul>
-                    <li class="new"><a href="https://tcrf.net/The_Cutting_Room_Floor" target="_blank">The Cutting Room Floor</a>; An indie wiki about cut and unused content from video games. ★</li>
-                    <li class="new"><a href="https://chartcarr.neocities.org" target="_blank">chart's translations</a>; English translations of various gaming-related articles.</li>
-                    <li class="new"><a href="https://virtu.pet" target="_blank">Virtu.pet</a>; My preferred way to play Neopets! An amazing recreation of the OG experience. ★</li>
-                    <li class="new"><a href="https://junelalonde.bandcamp.com/" target="_blank">June Lalonde</a> (Bandcamp); A furry musician. I've been listening to her tunes for over a decade!</li>
+                    <li class="new"><a href="https://www.icepets.com/">Icepets</a>; A lesser-known browser pet game with a really chill (eh) community.</li>
+                    <li class="new"><a href="https://www.pixelcatsend.com" target="_blank">Pixel Cat's End</a>; A browser pet game with unique gameplay inspired by TTRPGs.</li>
+                    <li class="new"><a href="https://r-roms.github.io/" target="_blank">/r/Roms Megathread</a>; ROM provider with lots of obscure stuff.</li>
+                    <li><a href="https://tcrf.net/The_Cutting_Room_Floor" target="_blank">The Cutting Room Floor</a>; An indie wiki about cut and unused content from video games. ★</li>
+                    <li><a href="https://chartcarr.neocities.org" target="_blank">chart's translations</a>; English translations of various gaming-related articles.</li>
+                    <li><a href="https://virtu.pet" target="_blank">Virtu.pet</a>; My preferred way to play Neopets! An amazing recreation of the OG experience. ★</li>
+                    <li><a href="https://junelalonde.bandcamp.com/" target="_blank">June Lalonde</a> (Bandcamp); A furry musician. I've been listening to her tunes for over a decade!</li>
                     <li><a href="https://yokai.com/" target="_blank">Yokai.com</a>; A database of Japanese folklore.</li>
                     <li><a href="https://www.protondb.com/" target="_blank">ProtonDB</a>; Linux/Steam Deck compatability reports. Always check before buying a Steam game if you're a Linux user!</li>
                     <li><a href="https://vimm.net" target="_blank">Vimm's Lair</a>; Long-running ROM provider with a focus on older titles. ★</li>
@@ -149,6 +152,8 @@
             <header><h2>The odd ones</h2></header>
             <div>
                 <ul>
+                    <li class="new"><a href="https://www.ding.net/bonsaikitten/">Bonsai Kitten</a>; One of the OG hoax websites. Fooling people since 2000!</li>
+                    <li class="new"><a href="http://blackpeopleloveus.com/" target="_blank">Black People Love Us!</a>; A site parodying <em>those</em> kinds of white people.</li>
                     <li><a href="https://www.youtube.com/@parthenocarpySA" target="_blank">parthenocarpySA</a> (Youtube); AKA Cooking With Hoarders. Home of the most chaotic cooking show imaginable. ★</li>
                     <li><a href="https://www.youtube.com/@DeadwingDork" target="_blank">DeadwingDork</a> (Youtube); Guy on Youtube that talks about Internet weirdos. ★</li>
                     <li><a href="http://www.demon-sushi.com/warning/" target="_blank">Documentation of the FF7 House</a> (18+); A bunch of early 2000s documents related to what can only be described as a soulbonding cult.</li>
