--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             border: 1px solid #fff;
             padding: 15px;
             max-width: 100%;
-            height: 150px;
+            height: 190px;
             overflow: auto;
             margin: auto;
             color: #230725;
@@ -66,20 +66,18 @@
             margin-bottom: 10px;
         }
 
-        nav a {
-            background-color: #fff;
-            padding-left: 2px;
-            padding-right: 2px;
+        nav button {
+            width: 100%;
+            background-color: #230725;
+            outline: none;
+            border: 2px outset #d31d45;
+            color: #ffd4e3;
+            margin: 2px 0;
         }
 
-        nav ul {
-            list-style: none;
-            margin-left: -30px;
-        }
-
-        nav li::before {
-            content: '↳';
-            margin-right: 2px;
+        nav button:hover {
+            background-color: #000;
+            border: 2px outset #d31d45;
         }
 
         article {
@@ -136,27 +134,18 @@
         <aside>
             <h2>Navigation</h2>
             <nav>
-                <h3>Mine</h3>
-                <ul>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/fursona.html">Fursona</a></li>
-                    <li><a href="/art.html">Art gallery</a></li>
-                    <li><a href="/writing.html">Written works</a></li>
-                    <li><a href="/readinglog.html">Reading log</a></li>
-                    <li><a href="/images/desktop.png">desktop.png</a></li>
-                </ul>
-                <h3>Yours</h3>
-                <ul>
-                    <li><a href="/freebies.html">Freebies</a></li>
-                </ul>
-                <h3>Et cetera</h3>
-                <ul>
-                    <li><a href="/linkroll.html">Linkroll</a></li>
-                </ul>
+                <a href="/about.html"><button>About me</button></a>
+                <a href="/fursona.html"><button>My fursona</button></a>
+                <a href="/art.html"><button>Art gallery</button></a>
+                <a href="/writing.html"><button>Writings</button></a>
+                <a href="/readinglog.html"><button>Reading log</button></a>
+                <a href="/freebies.html"><button>Free graphics</button></a>
+                <a href="/linkroll.html"><button>Linkroll</button></a>
+                <a href="/images/desktop.png"><button>desktop.png</button></a>
             </nav>
             <img src="/images/publicbath.jpg" style="border: 1px solid #ffd4e3;">
             <h2><span style="text-transform: uppercase;">BayaNet</span>!</h2>
-            <a href="https://croful.neocities.org/bayanet" target="_blank"><img src="https://croful.neocities.org/assets/bayanet/devils.png" alt="BayaNet member ID" style="margin-bottom: 5px;"></a>
+            <a href="https://croful.neocities.org/bayanet"><img src="https://croful.neocities.org/assets/bayanet/v2/devils.png"></a>
         </aside>
         <article>
             <h2>What's the story, purgatory?</h2>
@@ -172,7 +161,7 @@
             </section>
             <section id="video">
                 <h3>Video of the now</h3>
-                <iframe width="100%" height="135px" src="https://www.youtube-nocookie.com/embed/_QDuRU9b9Yw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="100%" height="135px" src="https://www.youtube-nocookie.com/embed/Q1vkjOvD-zs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h6><a href="/videoarchive.html">Video archive</a></h6>
             </section>
             <a href="https://web.archive.org/web/20001025155534/http://www.amy.hi-ho.ne.jp/~mono93/cat/english/sozai_e.html" target="_blank"><img src="/images/neko.gif" style="float: right;"></a>
