--- a/index.html
+++ b/index.html
@@ -2,176 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>yourdevilfriends.art</title>
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://transmascring.netlify.app/tmring.css">
-    <title>The devils' den</title>
-    <style>
-        body {
-            color: #fff;
-            background-image: url(/images/backgrounds/space.gif);
-            animation: bgmove linear 5s infinite;
-        }
-
-        @keyframes bgmove {
-            0% {
-                background-position: 0 0;
-            }
-
-            100% {
-                background-position: 304px 234px;
-            }
-        }
-
-        a {
-            color: #d31d45;
-        }
-
-        main {
-            background-color: #000;
-            border: 4px double #fff;
-            width: 600px;
-            margin: 25px auto;
-        }
-
-        header {
-            text-align: center;
-            margin-top: 25px;
-        }
-
-        header a {
-            color: #fff;
-        }
-
-        aside {
-            width: 190px;
-            height: 540px;
-            padding: 10px;
-            overflow: hidden;
-            display: inline-block;
-            border-right: 1px solid #fff;
-            text-align: center;
-        }
-
-        nav {
-            background-image: url(/images/backgrounds/clouds.jpg);
-            border: 1px solid #fff;
-            padding: 15px;
-            max-width: 100%;
-            height: 190px;
-            overflow: auto;
-            margin: auto;
-            color: #230725;
-            text-align: left;
-            margin-bottom: 10px;
-        }
-
-        nav button {
-            width: 100%;
-            background-color: #230725;
-            outline: none;
-            border: 2px outset #d31d45;
-            color: #ffd4e3;
-            margin: 2px 0;
-        }
-
-        nav button:hover {
-            background-color: #000;
-            border: 2px outset #d31d45;
-        }
-
-        article {
-            height: 540px;
-            width: 355px;
-            padding: 10px;
-            overflow: hidden;
-            display: inline-block;
-            vertical-align: top;
-        }
-
-        h2, h3 {
-            margin-bottom: 2px;
-        }
-
-        #button {
-            width: 120px;
-            height: 200px;
-            text-align: center;
-            display: inline-block;
-            vertical-align: top;
-            overflow: hidden;
-        }
-
-        #video {
-            width: 220px;
-            height: 200px;
-            text-align: center;
-            display: inline-block;
-            vertical-align: top;
-            overflow: hidden;
-            text-align: center;
-        }
-
-        footer {
-            border-top: 1px solid #fff;
-            text-align: center;
-            max-width: 100%;
-            margin-top: -5px;
-        }
-
-        #melonland-surf-club {
-            position: fixed;
-            bottom: 25px;
-            left: 25px;
-        }
-    </style>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <!--HEADER & NAVIGATION-->
     <header>
-        <h1>yourdevilfriends.art</h1>
+        <h1><a href="/">your · devil · friends</a></h1>
     </header>
-    <main>
-        <aside>
-            <h2>Navigation</h2>
-            <nav>
-                <a href="/about.html"><button>About me</button></a>
-                <a href="/fursona.html"><button>My fursona</button></a>
-                <a href="/art.html"><button>Art gallery</button></a>
-                <a href="/writing.html"><button>Writings</button></a>
-                <a href="/readinglog.html"><button>Reading log</button></a>
-                <a href="/freebies.html"><button>Free graphics</button></a>
-                <a href="/linkroll.html"><button>Linkroll</button></a>
-                <a href="/images/desktop.png"><button>desktop.png</button></a>
-            </nav>
-            <img src="/images/publicbath.jpg" style="border: 1px solid #ffd4e3;">
-            <h2><span style="text-transform: uppercase;">BayaNet</span>!</h2>
-            <a href="https://croful.neocities.org/bayanet"><img src="https://croful.neocities.org/assets/bayanet/v2/devils.png"></a>
-        </aside>
-        <article>
-            <h2>What's the story, purgatory?</h2>
-            <p>I see you've stumbled onto my main site... Here you will find some of my works, as well as anything else I wanna add.</p>
-            <p>Here I try to keep the mood light and fun, so stay a while, will ya? You might even find something mildly interesting here.</p>
-            <p>A warning: <strong>you might see suggestive or violent themes in the art gallery!</strong> Browse safely.</p>
-            <section id="button">
-                <h3>Button</h3>
-                <img src="/images/buttons/yourdevilfriends.png" alt="yourdevilfriends.art button">
-                <p>No hotlink pls</p>
-                <h3>My other site</h3>
-                <a href="https://dungbeetle.neocities.org/" target="_blank"><img src="https://images2.imgbox.com/53/84/lZfeLy88_o.gif" alt="dungbeetle.neocities.org"></a>
-            </section>
-            <section id="video">
-                <h3>Video of the now</h3>
-                <iframe width="100%" height="135px" src="https://www.youtube-nocookie.com/embed/Q1vkjOvD-zs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h6><a href="/videoarchive.html">Video archive</a></h6>
-            </section>
-            <a href="https://web.archive.org/web/20001025155534/http://www.amy.hi-ho.ne.jp/~mono93/cat/english/sozai_e.html" target="_blank"><img src="/images/neko.gif" style="float: right;"></a>
-            <h6>Graphics link to source if I know it</h6>
-            <a href="http://www.mabsland.com/Adoption.html" target="_blank"><img src="/images/buttons/censor.gif" alt="Website rated MA" title="This website is not for the faint of heart, the overly judgemental and tiny baby children "></a>
-        </article>
-        <footer>
+    <nav>
+        <div class="dropdown">
+            <button style="background-image: url(/images/backgrounds/button1.png);">Personal</button>
+            <div>
+                <a href="/about.html">About</a>
+                <a href="/art.html">Artwork</a>
+                <a href="/reads.html">Reading log</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button style="background-image: url(/images/backgrounds/button2.png);">For you</button>
+            <div>
+                <a href="/accessibility.html">Web accessibility guide</a>
+                <a href="/f2u.html">F2U graphics</a>
+                <a href="/scans.html">Scans</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button style="background-image: url(/images/backgrounds/button3.png);">Et cetera</button>
+            <div>
+                <a href="/linkroll.html">Linkroll</a>
+                <a href="https://yourdevilfriends.123guestbook.com/" target="_blank">Guestbook</a>
+            </div>
+        </div>
+    </nav>
+    <!--MAIN CONTENT-->
+    <main id="index">
+        <!--WELCOME-->
+        <section id="welcome">
+            <h2>Welcome · <span lang="pt">Bem-vindo</span> · <span lang="fr">Bienvenue</span></h2>
+            <div>
+                <p>This is <em>yourdevilfriends.art</em>, a personal website maintained by <strong>devils</strong>. Made with self-indulgence in mind and not much else, it's a mere hobby that I turned into my main online presence.</p>
+                <p>By all means, feel free to poke around. Maybe you'll even find one or two things of interest.</p>
+            </div>
+            <h2>Obligatory contact information</h2>
+            <div>
+                <p>The best way to contact me is through <a href="mailto:heckmaster@protonmail.com">e-mail</a>. I'm additionally really active on Discord, so feel free to ask for my handle there.</p>
+                <p>As for social media, I'm only active on Tumblr (<a href="https://heckmaster.tumblr.com/" target="_blank">main blog</a> & <a href="https://yourdevilfriends.tumblr.com/" target="_blank">art blog</a>). Other than that, I'm also fairly active over at <a href="https://forum.melonland.net/index.php?action=profile;u=641" target="_blank">MelonLand Forum</a>.</p>
+            </div>
+        </section>
+        <!--WEBRINGS-->
+        <aside id="webrings">
+            <!-- TRANSMASC RING -->
             <center>
-                <!-- Transmasc Ring -->
-                <div id="tmring" style="margin-top: 25px; width: 280px;">
+                <div id="tmring">
                     <div id="tmri">
                     <img src="https://transmascring.netlify.app/tiny.png"><br>
                     <p>Transmasculine Pride Webring</p>
@@ -179,21 +64,49 @@
                     </div> 
                 </div>
             </center>
-            <p>yourdevilfriends.art © <a href="mailto:heckmaster@protonmail.com">Bruno «devils» A.</a><br>
-                2023-whenever</p>
-                <p><a rel="me" href="https://blorbo.social/@yourdevilfriends" target="_blank">Mastodon</a> · <a href="https://yourdevilfriends.tumblr.com/" target="_blank">Tumblr</a></p>
-                <a href="https://www.deviantart.com/kouenli/art/No-Bad-Hair-Days-On-The-Internet-682431234" target="_blank"><img src="/images/buttons/badhair.png" alt="There are no bad hair days on the Internet"></a>
-                <img src="/images/buttons/coffee.gif" alt="Fueled by coffee">
-                <img src="/images/buttons/gothere.gif" alt="Go to hell now!">
-                <img src="/images/buttons/linux.gif" alt="Linux now!">
-                <a href="https://ihatetheimperialsystem.neocities.org" target="_blank"><img src="/images/buttons/ihatetheimperialsystem.gif" alt="I hate the imperial system"></a>
-                <img src="/images/buttons/piracy.gif" alt="Piracy now!">
-                <br>
-                <img src="/images/strawbs.gif">
-                <img src="/images/buttons/powered.gif" alt="Powered by pure evil">
-                <img src="/images/strawbs.gif">
-        </footer>
+            <!--BAYANET-->
+            <a href="https://ochame.neocities.org/bayanet"><img src="https://ochame.neocities.org/assets/bayanet/v2/devils.png"></a>
+            <!--STAMPS-->
+            <div id="stamps">
+                <a href="https://omfg.neocities.org/graphics" target="_blank"><img src="/images/decor/stamps/tulips.gif" alt="ACNH tulips stamp"></a>
+                <a href="https://mesoscale.neocities.org/" target="_blank"><img src="/images/decor/stamps/fighton.gif" alt="Mob Psycho 100 stamp"></a>
+                <a href="https://www.deviantart.com/miharuyyoite/art/Stamp-Punpun-v-1-498473588" target="_blank"><img src="/images/decor/stamps/punpun.gif" alt="Oyasumi Punpun stamp"></a>
+                <a href="https://www.deviantart.com/peachkonpeito/art/stamp-022-740658971" target="_blank"><img src="/images/decor/stamps/spiritedaway.gif" alt="Spirited Away stamp"></a>
+            </div>
+        </aside>
+        <!--BUTTON WALL-->
+        <aside id="notebook">
+            <header></header>
+            <div>
+                <a href="https://cyber-rot.neocities.org/mine" target="_blank"><img src="/images/decor/buttons/ao3.gif" alt="Pro AO3 freak"></a>
+                <a href="https://sightseer.neocities.org/graphics/" target="_blank"><img src="/images/decor/buttons/art.png" alt="I support artistic freedom"></a>
+                <a href="https://www.deviantart.com/kouenli/art/No-Bad-Hair-Days-On-The-Internet-682431234" target="_blank"><img src="/images/decor/buttons/badhair.png" alt="There are ni bad hair days on the Internet"></a>
+                <img src="/images/decor/buttons/freespeech.gif" alt="Free speech forever">
+                <img src="/images/decor/buttons/piracy.gif" alt="Piracy now!">
+                <img src="/images/decor/buttons/gothere.gif" alt="Go to Hell now!">
+                <img src="/images/decor/buttons/linux.gif" alt="Linux now!">
+                <a href="https://dokode.moe/graphics" target="_blank"><img src="/images/decor/buttons/mikumustdie.gif" alt="Miku must die"></a>
+            </div>
+            <footer></footer>
+        </aside>
+        <!--WARNINGS & CREDIT-->
+        <section id="disclaimers">
+            <h2>Content warnings</h2>
+            <div>
+                <p>Despite the colorful graphics, this website is <strong>not meant for children</strong>. Suggestive themes, trauma and violence are recurring topics within my art, and the books I talk about aren't typically meant for a young audience either.</p>
+                <p>Viewer discretion is advised.</p>
+            </div>
+            <h2>Credits</h2>
+            <div>Unless the source of a graphic is not known, clicking on an image will redirect visitors to the original source.</div>
+        </section>
     </main>
-    <object id="melonland-surf-club" data="https://melonland.net/surf-badge.svg?fill=#e01b24" type="image/svg+xml" style="width: 100px; height: 100px;"></object>
+    <!--FOOTER-->
+    <footer>
+        <img src="/images/freebies/adopts/tattletail.gif" style="float: left; margin-top: 25px; margin-left: 100px;">
+        <img src="/images/freebies/adopts/tattletail.gif" style="float: right; margin-top: 25px; margin-right: 100px;">
+        <p>yourdevilfriends was created by Bruno «devils» A.<br>
+        2023-whenever</p>
+        <img src="/images/decor/divider.gif"><img src="/images/decor/buttons/powered.gif" alt="Powered by pure evil"><img src="/images/decor/divider.gif">
+    </footer>
 </body>
 </html>
