--- a/accessibility.html
+++ b/accessibility.html
@@ -42,14 +42,15 @@
             <!--INTRODUCTION & TABLE OF CONTENTS-->
             <p>Whenever I browse personal websites, it's often I notice a lack of thought from their Webmasters when it comes to browsing the Web in a way different than their own.</p>
             <p>Since I started creating websites, I ended up learning a lot about Web accessibility and why it matters. I very firmly believe that the indie Web shouldn't be gatekept from people who genuinely want to learn more about it, especially if it's over something they can't control.</p>
-            <p>So, here's a list of things you might want to upgrade or add to your site, with instructions on how to do them and why it's important.</p>
+            <p>So, here's a list of things you might want to upgrade or add to your site, with instructions on how to do them and why they're important.</p>
+            <p>These are just suggestions. As you can probably tell, this site itself isn't mobile-friendly, which is an accessibility issue. At the end of the day, a Webmaster has to take these issues into consideration and arrive at a conclusion that allows for their creative vision to be fulfilled. It's all part of the problem-solving process of creating websites.</p>
             <h3>Table of contents</h3>
             <ol>
                 <li><a href="#screen-readers">Designing with screen readers in mind</a></li>
                 <li><a href="#alt-text">Writing alt text</a></li>
                 <li><a href="#autoplay">Autoplay sounds and music</a></li>
                 <li><a href="#links">Links must look like links</a></li>
-                <li><a href="#fonts">Fonts andd readability</a></li>
+                <li><a href="#fonts">Fonts and readability</a></li>
                 <li><a href="#emojis">Emojis</a></li>
                 <li><a href="#gifs">Flashing GIFs</a></li>
                 <li><a href="#transcripts">Transcripts for audio</a></li>
