--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
     </main>
     <!--FOOTER-->
     <footer>
-        <img src="/images/freebies/adopts/tattletail.gif" style="float: left; margin-top: 25px; margin-left: 100px;">
-        <img src="/images/freebies/adopts/tattletail.gif" style="float: right; margin-top: 25px; margin-right: 100px;">
+        <a href="/f2u.html"><img src="/images/freebies/adopts/tattletail.gif" style="float: left; margin-top: 25px; margin-left: 100px;"></a>
+        <a href="/f2u.html"><img src="/images/freebies/adopts/tattletail.gif" style="float: right; margin-top: 25px; margin-right: 100px;"></a>
         <p>yourdevilfriends was created by Bruno «devils» A.<br>
         2023-whenever</p>
         <img src="/images/decor/divider.gif"><img src="/images/decor/buttons/powered.gif" alt="Powered by pure evil"><img src="/images/decor/divider.gif">
