About page, minor changes
Ooo what's this

--- a/accessibility.html
+++ b/accessibility.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!--HEADER & NAVIGATION-->
-    <header>
+    <header id="top">
         <h1><a href="/">your · devil · friends</a></h1>
     </header>
     <nav>
@@ -31,6 +31,7 @@
         <div class="dropdown">
             <button style="background-image: url(/images/backgrounds/button3.png);">Et cetera</button>
             <div>
+                <a href="/buttons.html">Button wall</a>
                 <a href="/linkroll.html">Linkroll</a>
                 <a href="https://yourdevilfriends.123guestbook.com/" target="_blank">Guestbook</a>
             </div>
@@ -182,5 +183,9 @@
         2023-whenever</p>
         <img src="/images/decor/divider.gif"><img src="/images/decor/buttons/powered.gif" alt="Powered by pure evil"><img src="/images/decor/divider.gif">
     </footer>
+    <!--BACK TO TOP-->
+    <button id="back">
+        <a href="#top"><img src="/images/decor/arrow.gif" alt="Back to top"></a>
+    </button>
 </body>
 </html>
