--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>yourdevilfriends.art</title>
+    <title>The devils' den</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://transmascring.netlify.app/tmring.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <!--HEADER & NAVIGATION-->
-    <header>
+    <header id="top">
         <h1><a href="/">your · devil · friends</a></h1>
     </header>
     <nav>
@@ -32,6 +32,7 @@
         <div class="dropdown">
             <button style="background-image: url(/images/backgrounds/button3.png);">Et cetera</button>
             <div>
+                <a href="/buttons.html">Button wall</a>
                 <a href="/linkroll.html">Linkroll</a>
                 <a href="https://yourdevilfriends.123guestbook.com/" target="_blank">Guestbook</a>
             </div>
@@ -49,7 +50,7 @@
             <h2>Obligatory contact information</h2>
             <div>
                 <p>The best way to contact me is through <a href="mailto:heckmaster@protonmail.com">e-mail</a>. I'm additionally really active on Discord, so feel free to ask for my handle there.</p>
-                <p>As for social media, I'm only active on Tumblr (<a href="https://heckmaster.tumblr.com/" target="_blank">main blog</a> & <a href="https://yourdevilfriends.tumblr.com/" target="_blank">art blog</a>). Other than that, I'm also fairly active over at <a href="https://forum.melonland.net/index.php?action=profile;u=641" target="_blank">MelonLand Forum</a>.</p>
+                <p>As for social media, I'm only active on Tumblr (<a href="https://heckmaster.tumblr.com/" target="_blank">main blog</a> & <a href="https://yourdevilfriends.tumblr.com/" target="_blank">art blog</a>) and <a href="https://blorbo.social/@yourdevilfriends" target="_blank" rel="me">Mastodon</a>. You may also find me at <a href="https://forum.melonland.net/index.php?action=profile;u=641" target="_blank">MelonLand Forum.</a></p>
             </div>
         </section>
         <!--WEBRINGS-->
@@ -108,5 +109,9 @@
         2023-whenever</p>
         <img src="/images/decor/divider.gif"><img src="/images/decor/buttons/powered.gif" alt="Powered by pure evil"><img src="/images/decor/divider.gif">
     </footer>
+    <!--BACK TO TOP-->
+    <button id="back">
+        <a href="#top"><img src="/images/decor/arrow.gif" alt="Back to top"></a>
+    </button>
 </body>
 </html>
