Artwork page, minor changes
HELP

--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
             <button style="background-image: url(/images/backgrounds/button2.png);">For you</button>
             <div>
                 <a href="/accessibility.html">Web accessibility guide</a>
-                <a href="/f2u.html">F2U graphics</a>
+                <a href="/freebies.html">F2U graphics</a>
                 <a href="/scans.html">Scans</a>
             </div>
         </div>
@@ -44,8 +44,8 @@
     </main>
     <!--FOOTER-->
     <footer>
-        <a href="/f2u.html"><img src="/images/freebies/adopts/tattletail.gif" style="float: left; margin-top: 25px; margin-left: 100px;"></a>
-        <a href="/f2u.html"><img src="/images/freebies/adopts/tattletail.gif" style="float: right; margin-top: 25px; margin-right: 100px;"></a>
+        <a href="/freebies.html"><img src="/images/freebies/adopts/tattletail.gif" style="float: left; margin-top: 25px; margin-left: 100px;"></a>
+        <a href="/freebies.html"><img src="/images/freebies/adopts/tattletail.gif" style="float: right; margin-top: 25px; margin-right: 100px;"></a>
         <p>yourdevilfriends was created by Bruno «devils» A.<br>
         2023-whenever</p>
         <img src="/images/decor/divider.gif"><img src="/images/decor/buttons/powered.gif" alt="Powered by pure evil"><img src="/images/decor/divider.gif">
