--- a/accessibility.html
+++ b/accessibility.html
@@ -24,7 +24,7 @@
             <button style="background-image: url(/images/backgrounds/button2.png);">For you</button>
             <div>
                 <a href="/accessibility.html">Web accessibility guide</a>
-                <a href="/f2u.html">F2U graphics</a>
+                <a href="/freebies.html">F2U graphics</a>
                 <a href="/scans.html">Scans</a>
             </div>
         </div>
