--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <button style="background-image: url(/images/backgrounds/button2.png);">For you</button>
             <div>
                 <a href="/accessibility.html">Web accessibility guide</a>
-                <a href="/f2u.html">F2U graphics</a>
+                <a href="/freebies.html">F2U graphics</a>
                 <a href="/scans.html">Scans</a>
             </div>
         </div>
@@ -48,12 +48,12 @@
         </section>
         <!--BUTTONS-->
         <section id="buttons">
-            <a href="/f2u.html"><img src="/images/freebies/buttons/halley-labs.png" alt="Halley Labs"></a>
+            <a href="/freebies.html"><img src="/images/freebies/buttons/halley-labs.png" alt="Halley Labs"></a>
             <img src="/images/decor/buttons/cocksuckingfaggot.gif" alt="Cock sucking faggot">
             <img src="/images/decor/buttons/htmldream.gif" alt="I dream in HTML">
             <img src="/images/decor/buttons/coffee.gif" alt="Fueled by coffee">
             <a href="https://ihatetheimperialsystem.neocities.org/" target="_blank"><img src="/images/decor/buttons/ihatetheimperialsystem.gif" alt="I hate the imperial system"></a>
-            <a href="/f2u.html"><img src="/images/freebies/buttons/jesus.png" alt="Jesus kissed men"></a>
+            <a href="/freebies.html"><img src="/images/freebies/buttons/jesus.png" alt="Jesus kissed men"></a>
         </section>
         <!--QUIZ RESULTS-->
         <h2 style="font-family: courier;">Quiz results</h2>
@@ -105,8 +105,8 @@
     </main>
     <!--FOOTER-->
     <footer>
-        <a href="/f2u.html"><img src="/images/freebies/adopts/tattletail.gif" style="float: left; margin-top: 25px; margin-left: 100px;"></a>
-        <a href="/f2u.html"><img src="/images/freebies/adopts/tattletail.gif" style="float: right; margin-top: 25px; margin-right: 100px;"></a>
+        <a href="/freebies.html"><img src="/images/freebies/adopts/tattletail.gif" style="float: left; margin-top: 25px; margin-left: 100px;"></a>
+        <a href="/freebies.html"><img src="/images/freebies/adopts/tattletail.gif" style="float: right; margin-top: 25px; margin-right: 100px;"></a>
         <p>yourdevilfriends was created by Bruno «devils» A.<br>
         2023-whenever</p>
         <img src="/images/decor/divider.gif"><img src="/images/decor/buttons/powered.gif" alt="Powered by pure evil"><img src="/images/decor/divider.gif">
