Freebies page, new scans

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                     </TD></TR>
                 </TABLE>
                 <br>
-                <a href="http://thousandroads.net/misc/pmdquiz/"><img src="http://thousandroads.net/misc/pmdquiz/static/results/Charmander.png" alt="I am Charmander!" /></a>
+                <a href="http://www.dragonflycave.com/quizzes/what-pokemon-are-you"><img src="http://www.dragonflycave.com/wpay/charizard.gif" alt="I am a Charizard!" title="Find out what Pokémon you are at The Cave of Dragonflies"></a>
                 <br><br>
                 <a href='https://clownfredzone.neocities.org/clownquiz.html'><img src='https://clownfredzone.neocities.org/cq/PierrotLarge1.png' alt='I am a Pierrot Mime! Click here to take the clown quiz!'></a>
             </div>
