--- a/scans.html
+++ b/scans.html
@@ -32,6 +32,8 @@
         <a href="/images/scans/pins/alastor1.png"><img src="/images/scans/pins/alastor1.png" alt="Pilot Alastor pin"></a>
         <!--COVERS-->
         <h2 id="covers">Covers</h2>
+        <a href="/images/scans/covers/astro-boy-1.jpg"><img src="/images/scans/covers/astro-boy-1.jpg" alt="Astro Boy cover"></a>
+        <a href="/images/scans/covers/zatchbell.jpg"><img src="/images/scans/covers/zatchbell.jpg" alt="Zatchbell cover"></a>
         <a href="/images/scans/covers/stargazing-dog.jpg"><img src="/images/scans/covers/stargazing-dog.jpg" alt="Stargazing Dog cover"></a>
         <a href="/images/scans/covers/fragments-of-horror.jpg"><img src="/images/scans/covers/fragments-of-horror.jpg" alt="Fragments of Horror cover"></a>
         <a href="/images/scans/covers/cat-partners.jpg"><img src="/images/scans/covers/cat-partners.jpg" alt="Cat Partners: Hachi & Maruru cover"></a>
