--- a/scans.html
+++ b/scans.html
@@ -30,13 +30,43 @@
         <a href="/images/scans/pins/alastor2.png"><img src="/images/scans/pins/alastor2.png" alt="Valentine's Alastor pin"></a>
         <a href="/images/scans/pins/angeldust1.png"><img src="/images/scans/pins/angeldust1.png" alt="Pilot Angel Dust pin"></a>
         <a href="/images/scans/pins/alastor1.png"><img src="/images/scans/pins/alastor1.png" alt="Pilot Alastor pin"></a>
-        <!--COVERS-->
-        <h2 id="covers">Covers</h2>
-        <a href="/images/scans/covers/astro-boy-1.jpg"><img src="/images/scans/covers/astro-boy-1.jpg" alt="Astro Boy cover"></a>
-        <a href="/images/scans/covers/zatchbell.jpg"><img src="/images/scans/covers/zatchbell.jpg" alt="Zatchbell cover"></a>
+        <!--MANGA COVERS-->
+        <h2 id="covers">Manga covers</h2>
+        <a href="/images/scans/covers/goodnight-punpun-7.jpg"><img src="/images/scans/covers/goodnight-punpun-7.jpg" alt="Goodnight Punpun #7 cover"></a>
+        <a href="/images/scans/covers/goodnight-punpun-6.jpg"><img src="/images/scans/covers/goodnight-punpun-6.jpg" alt="Goodnight Punpun #6 cover"></a>
+        <a href="/images/scans/covers/goodnight-punpun-5.jpg"><img src="/images/scans/covers/goodnight-punpun-5.jpg" alt="Goodnight Punpun #5 cover"></a>
+        <a href="/images/scans/covers/goodnight-punpun-4.jpg"><img src="/images/scans/covers/goodnight-punpun-4.jpg" alt="Goodnight Punpun #4 cover"></a>
+        <a href="/images/scans/covers/goodnight-punpun-3.jpg"><img src="/images/scans/covers/goodnight-punpun-3.jpg" alt="Goodnight Punpun #3 cover"></a>
+        <a href="/images/scans/covers/goodnight-punpun-2.jpg"><img src="/images/scans/covers/goodnight-punpun-2.jpg" alt="Goodnight Punpun #2 cover"></a>
+        <a href="/images/scans/covers/goodnight-punpun-1.jpg"><img src="/images/scans/covers/goodnight-punpun-1.jpg" alt="Goodnight Punpun #1 cover"></a>
+        <a href="/images/scans/covers/keroro-8.jpg"><img src="/images/scans/covers/keroro-8.jpg" alt="Keroro #8 cover"></a>
+        <a href="/images/scans/covers/keroro-7.jpg"><img src="/images/scans/covers/keroro-7.jpg" alt="Keroro #7 cover"></a>
+        <a href="/images/scans/covers/keroro-6.jpg"><img src="/images/scans/covers/keroro-6.jpg" alt="Keroro #6 cover"></a>
+        <a href="/images/scans/covers/keroro-5.jpg"><img src="/images/scans/covers/keroro-5.jpg" alt="Keroro #5 cover"></a>
+        <a href="/images/scans/covers/keroro-4.jpg"><img src="/images/scans/covers/keroro-4.jpg" alt="Keroro #4 cover"></a>
+        <a href="/images/scans/covers/keroro-3.jpg"><img src="/images/scans/covers/keroro-3.jpg" alt="Keroro #3 cover"></a>
+        <a href="/images/scans/covers/keroro-2.jpg"><img src="/images/scans/covers/keroro-2.jpg" alt="Keroro #2 cover"></a>
+        <a href="/images/scans/covers/keroro-1.jpg"><img src="/images/scans/covers/keroro-1.jpg" alt="Keroro #1 cover"></a>
+        <a href="/images/scans/covers/tekkonkinkreet-alt.jpg"><img src="/images/scans/covers/tekkonkinkreet-alt.jpg" alt="Tekkonkinkreet alternate cover"></a>
+        <a href="/images/scans/covers/tekkonkinkreet.jpg"><img src="/images/scans/covers/tekkonkinkreet.jpg" alt="Tekkonkinkreet cover"></a>
+        <a href="/images/scans/covers/splatoon-1.jpg"><img src="/images/scans/covers/splatoon-1.jpg" alt="Splatoon #1 cover"></a>
+        <a href="/images/scans/covers/soul-eater-1.jpg"><img src="/images/scans/covers/soul-eater-1.jpg" alt="Soul Eater #1 cover"></a>
+        <a href="/images/scans/covers/solitary-gourmet.jpg"><img src="/images/scans/covers/solitary-gourmet.jpg" alt="Solitary Gourmet cover"></a>
+        <a href="/images/scans/covers/legend-of-zelda-mm-alttp.jpg"><img src="/images/scans/covers/legend-of-zelda-mm-alttp.jpg" alt="Legend of Zelda Majora's Mask/A Link to the Past Legendary Edition cover"></a>
+        <a href="/images/scans/covers/pokémon-adventures-1.jpg"><img src="/images/scans/covers/pokémon-adventures-1.jpg" alt="Pokémon Adventures #1 cover"></a>
+        <a href="/images/scans/covers/gyo.jpg"><img src="/images/scans/covers/gyo.jpg" alt="Gyo cover"></a>
+        <a href="/images/scans/covers/gon-7.jpg"><img src="/images/scans/covers/gon-7.jpg" alt="Gon #7 cover"></a>
+        <a href="/images/scans/covers/gon-6.jpg"><img src="/images/scans/covers/gon-6.jpg" alt="Gon #6 cover"></a>
+        <a href="/images/scans/covers/gon-5.jpg"><img src="/images/scans/covers/gon-5.jpg" alt="Gon #5 cover"></a>
+        <a href="/images/scans/covers/gon-2.jpg"><img src="/images/scans/covers/gon-2.jpg" alt="Gon #2 cover"></a>
+        <a href="/images/scans/covers/dot-hack-4koma.jpg"><img src="/images/scans/covers/dot-hack-4koma.jpg" alt=".hack//4koma cover"></a>
+        <a href="/images/scans/covers/buddha.jpg"><img src="/images/scans/covers/buddha.jpg" alt="Buddha cover"></a>
+        <a href="/images/scans/covers/astro-boy-omnibus-4.jpg"><img src="/images/scans/covers/astro-boy-omnibus-4.jpg" alt="Astro Boy Omnibus #4 cover"></a>
+        <a href="/images/scans/covers/astro-boy-1.jpg"><img src="/images/scans/covers/astro-boy-1.jpg" alt="Astro Boy #1 cover"></a>
+        <a href="/images/scans/covers/zatchbell.jpg"><img src="/images/scans/covers/zatchbell-1.jpg" alt="Zatchbell #1 cover"></a>
         <a href="/images/scans/covers/stargazing-dog.jpg"><img src="/images/scans/covers/stargazing-dog.jpg" alt="Stargazing Dog cover"></a>
         <a href="/images/scans/covers/fragments-of-horror.jpg"><img src="/images/scans/covers/fragments-of-horror.jpg" alt="Fragments of Horror cover"></a>
-        <a href="/images/scans/covers/cat-partners.jpg"><img src="/images/scans/covers/cat-partners.jpg" alt="Cat Partners: Hachi & Maruru cover"></a>
+        <a href="/images/scans/covers/cat-partners.jpg"><img src="/images/scans/covers/cat-partners-1.jpg" alt="Cat Partners: Hachi & Maruru #1 cover"></a>
         <a href="/images/scans/covers/doing-time.jpg"><img src="/images/scans/covers/doing-time.jpg" alt="Doing Time cover"></a>
     </main>
 </body>
