New art, new blinkie

--- a/about.html
+++ b/about.html
@@ -100,7 +100,16 @@
             <a href="https://feelingmachine.moe/" target="_blank"><img src="/images/link-buttons/feelingmachine.gif" alt="FeelingMachine" title="Nephro!"></a>
             <!--DECOR-->
             <a href="https://youtu.be/4svlrjm98i8" target="_blank"><img src="/images/decor/solong.gif" alt="so long..."></a>
-            <marquee style="margin-top: 10px;"><a href="https://ochame.neocities.org/" target="_blank"><img src="/images/decor/badges/404.png"><img src="/images/decor/badges/64disk.png"><img src="/images/decor/badges/10thousand.png"><img src="/images/decor/badges/scaperune.png"><img src="/images/decor/badges/bond.png"></a></marquee>
+            <marquee style="margin-top: 10px;">
+                <a href="https://ochame.neocities.org/" style="text-decoration: none;" target="_blank">
+                    <img src="/images/decor/badges/404.png">
+                    <img src="/images/decor/badges/64disk.png">
+                    <img src="/images/decor/badges/10thousand.png">
+                    <img src="/images/decor/badges/scaperune.png">
+                    <img src="/images/decor/badges/bond.png">
+                    <img src="/images/decor/badges/fenne.png">
+                </a>
+            </marquee>
         </aside>
     </main>
     <!--FOOTER-->
