--- a/freebies.html
+++ b/freebies.html
@@ -96,6 +96,7 @@
         <!--BLINKIES-->
         <section>
             <h3>Blinkies</h3>
+            <img src="/images/freebies/blinkies/thanks-paul.gif" alt="The Northern Boys">
             <img src="/images/freebies/blinkies/cute.gif" alt="I am so fucking cute!">
             <img src="/images/freebies/blinkies/hazbin.gif" alt="Hazbin Hotel">
             <img src="/images/freebies/blinkies/alastor.gif" alt="Alastor from Hazbin Hotel">
