Minor changes, fixed a few links

--- a/about.html
+++ b/about.html
@@ -101,13 +101,16 @@
             <!--DECOR-->
             <a href="https://youtu.be/4svlrjm98i8" target="_blank"><img src="/images/decor/solong.gif" alt="so long..."></a>
             <marquee style="margin-top: 10px;">
-                <a href="https://ochame.neocities.org/" style="text-decoration: none;" target="_blank">
-                    <img src="/images/decor/badges/404.png">
-                    <img src="/images/decor/badges/64disk.png">
-                    <img src="/images/decor/badges/10thousand.png">
-                    <img src="/images/decor/badges/scaperune.png">
-                    <img src="/images/decor/badges/bond.png">
-                    <img src="/images/decor/badges/fenne.png">
+                <a href="https://ochame.neocities.org/badge" style="text-decoration: none;" target="_blank">
+                    <img src="/images/decor/badges/404.png" alt="How did we get here...?">
+                    <img src="/images/decor/badges/64disk.png" alt="64 Disk Drives">
+                    <img src="/images/decor/badges/10thousand.png" alt="10 Thousand Fireflies">
+                    <img src="/images/decor/badges/scaperune.png" alt="Badgelike Thing">
+                    <img src="/images/decor/badges/bond.png" alt="Membership Badge">
+                    <img src="/images/decor/badges/fenne.png" alt="Celebrate 10 years of Kalos with Fennekin!">
+                    <img src="/images/decor/badges/pride.png" alt="Under the Arch">
+                    <img src="/images/decor/badges/aro.png" alt="Oh So Aromatic!">
+                    <img src="/images/decor/badges/trans.png" alt="Tea Kitten">
                 </a>
             </marquee>
         </aside>
