--- a/index.html
+++ b/index.html
@@ -65,15 +65,13 @@
                     </div> 
                 </div>
             </center>
+            <!--*NIXRING-->
+            <div id='linuxring'>
+                <script type="text/javascript" src="https://teethinvitro.neocities.org/webring/linuxring/script/onionring-variables.js"></script>
+                <script type="text/javascript" src="https://teethinvitro.neocities.org/webring/linuxring/script/onionring-widget.js"></script>
+            </div>
             <!--BAYANET-->
             <a href="https://ochame.neocities.org/bayanet"><img src="https://ochame.neocities.org/assets/bayanet/v2/devils.png"></a>
-            <!--STAMPS-->
-            <div id="stamps">
-                <a href="https://omfg.neocities.org/graphics" target="_blank"><img src="/images/decor/stamps/tulips.gif" alt="ACNH tulips stamp"></a>
-                <a href="https://mesoscale.neocities.org/" target="_blank"><img src="/images/decor/stamps/fighton.gif" alt="Mob Psycho 100 stamp"></a>
-                <a href="https://www.deviantart.com/miharuyyoite/art/Stamp-Punpun-v-1-498473588" target="_blank"><img src="/images/decor/stamps/punpun.gif" alt="Oyasumi Punpun stamp"></a>
-                <a href="https://www.deviantart.com/peachkonpeito/art/stamp-022-740658971" target="_blank"><img src="/images/decor/stamps/spiritedaway.gif" alt="Spirited Away stamp"></a>
-            </div>
         </aside>
         <!--BUTTON WALL-->
         <aside id="notebook">
